--- a/DNAOrderApp/order/templates/order/project-list.html
+++ b/DNAOrderApp/order/templates/order/project-list.html
@@ -222,10 +222,11 @@
 {% block section_title %}<h1> Project List </h1>{% endblock section_title %}
 
 <h4> 
+	I NEED COOKIES TO REMEMBER WHO I AM. SO TO BE ABLE TO GET MY PROJECT LIST.
+	<br />
 	Hi, I assume I know who the user is. I also assume I will get a list of projects that is associated
 	to this user.
 	<br />
-	I AM THE FACULTY MEMBER.
 </h4>
 
 <br />
