--- a/DNAOrderApp/order/templates/order/base_template.html
+++ b/DNAOrderApp/order/templates/order/base_template.html
@@ -43,7 +43,7 @@
 
 		<!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
     	<!--<link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap-image-gallery.min.css">-->
-    	<link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/jquery.fileupload-ui.css">
+    	<!-- <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/jquery.fileupload-ui.css"> -->
 
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     	<!--[if lt IE 9]>
@@ -71,28 +71,25 @@
 					<!-- Everything you want hidden at 940px or less, place within here -->
 					<div class="nav-collapse collapse">
 						<ul class="nav pull-left">
+							<!-- THIS IS THE NAVIGATION BAR, TOP-LEFT -->
 							{% block active-navbar %}
 							{% endblock active-navbar %}
 						</ul>
 						<ul class="nav pull-right">
+							<!-- THIS IS THE SIGN IN AND SIGN UP BUTTONS, TOP-RIGHT -->
 							{% block active-navbar-pull-right %}
 							{% endblock active-navbar-pull-right %}
 
-							<li class="dropdown">
-
-								<a href="#user-profile" class="dropdown-toggle" data-toggle="dropdown">
-									<i class="icon-user icon-white"></i> Profile 
-									<b class="caret"></b>
-								</a>
-								<ul class="dropdown-menu">
-									<li><a href="user_profile"><i class="icon-user"></i> Conan O'Brien</a></li>
-									<li><a href="#edit-profile"><i class="icon-pencil"></i> Edit</a></li>
-									<li><a href="#logout"><i class="icon-off"></i> Log out</a></li>
-								</ul>
-							</li>
 						</ul>
 
-						{% block signup %}{% endblock signup %}
+						{% block signup %}
+						<!--form class="navbar-form pull-right">
+	<input class="span2" type="text" placeholder="Email">
+	<input class="span2" type="password" placeholder="Password">
+	<button type="submit" class="btn">Sign in</button>
+	<a href="sign-up" class="btn">Sign up</a>
+</form-->
+						{% endblock signup %}
 						
 					</div>
 					
