--- a/DNAOrderApp/order/templates/order/admin-page-2.html
+++ b/DNAOrderApp/order/templates/order/admin-page-2.html
@@ -31,29 +31,6 @@ var csrftoken = getCookie('csrftoken');
 $().ready(function() {
 	alert("Dom is now ready - this is admin-page-2");
 
-
-	// To Delete Projects
-	// $("a[class='btn delete']").click(function(){
-	// 	alert("delete has been clicked! - this is admin-page-2");
-	// 	alert($(this).attr("value"));
-	// 	var value = $(this).attr("value");
-
-	// 	alert($(this).attr("name"));
-	// 	var name = $(this).attr("name");
-
-	// 	$.ajax({
-	// 		url: '/order/api/handle_project/DELETE/'+value,
-	// 		type: "DELETE",
-	// 		headers : {"X-CSRFToken" : csrftoken},
-	// 	}).done( function(data) {
-	// 		console.log(data);
-	// 		$('table#project-table').replaceWith(data);
-	// 		$('div#alert-signs').html("<div class=\"alert alert-success\"><b>Good Job!</b> You have successfully deleted a project!</div>");
-	// 	}).fail( function(){
-	// 		$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
-	// 	});
-	// });
-
 	// To Add Projects
 	$("#add_a_project_form").ajaxForm({
 		url: '/order/api/handle_project/ADD/',
@@ -69,7 +46,59 @@ $().ready(function() {
 			$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
 		}
 	});
+	alert("done loading project form");
 
+	// To Add Sample Submission
+	$("#add_a_sample_submission_form").ajaxForm({
+		url: '/order/api/handle_sample_submission/ADD/',
+		type: "POST",
+		resetForm : true,
+		headers : {"X-CSRFToken" : csrftoken},
+		success : function(data) {
+			console.log(data);
+			$('table#sample-submission-table').replaceWith(data);
+			$('div#alert-signs').html("<div class=\"alert alert-success\"><b>Good Job!</b> You have successfully added a sample submission!</div>");
+		},
+		error : function(data) {
+			$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
+		}
+	});
+	alert("done loading sample submission form");
+
+	// To Add a User
+	$("#add_a_user_form").ajaxForm({
+		url: '/order/api/handle_user/ADD/',
+		type: "POST",
+		resetForm : true,
+		headers : {"X-CSRFToken" : csrftoken},
+		success : function(data) {
+			console.log(data);
+			$('table#user-table').replaceWith(data);
+			$('div#alert-signs').html("<div class=\"alert alert-success\"><b>Good Job!</b> You have successfully added a user!</div>");
+		},
+		error : function(data) {
+			$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
+		}
+	});
+	alert("done loading user form");
+
+
+	// To Add a Phenotype
+	$("#add_a_phenotype_form").ajaxForm({
+		url: '/order/api/handle_phenotype/ADD/',
+		type: "POST",
+		resetForm : true,
+		headers : {"X-CSRFToken" : csrftoken},
+		success : function(data) {
+			console.log(data);
+			$('table#phenotype-table').replaceWith(data);
+			$('div#alert-signs').html("<div class=\"alert alert-success\"><b>Good Job!</b> You have successfully added a Phenotype!</div>");
+		},
+		error : function(data) {
+			$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
+		}
+	});
+	alert("done loading phenotype form");
 
 });
 
@@ -94,6 +123,65 @@ function deleteProject(elt) {
 	return false;
 }
 
+function deleteSampleSubmit(elt){
+	alert("inside delete Sample submit");
+	var value = $(elt).attr("value");
+
+ 	$.ajax({
+		url: '/order/api/handle_sample_submission/DELETE/'+value,
+		type: "DELETE",
+		headers : {"X-CSRFToken" : csrftoken},
+	}).done( function(data) {
+		console.log(data);
+		$('table#sample-submission-table').replaceWith(data);
+		$('div#alert-signs').html("<div class=\"alert alert-success\"><b>Good Job!</b> You have successfully deleted a sample submission!</div>");
+	}).fail( function(){
+		$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
+	});
+
+ 	return false;
+ }
+
+function deleteUser(elt){
+	alert("inside delete User");
+	var value = $(elt).attr("value");
+
+ 	$.ajax({
+		url: '/order/api/handle_user/DELETE/'+value,
+		type: "DELETE",
+		headers : {"X-CSRFToken" : csrftoken},
+	}).done( function(data) {
+		console.log(data);
+		$('table#user-table').replaceWith(data);
+		$('div#alert-signs').html("<div class=\"alert alert-success\"><b>Good Job!</b> You have successfully deleted a user!</div>");
+	}).fail( function(){
+		$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
+	});
+
+ 	return false;
+ }
+
+function deletePhenotype(elt) {
+	var value = $(elt).attr("value");
+
+	alert($(elt).attr("name"));
+	var name = $(elt).attr("name");
+
+	$.ajax({
+		url: '/order/api/handle_phenotype/DELETE/'+value,
+		type: "DELETE",
+		headers : {"X-CSRFToken" : csrftoken},
+	}).done( function(data) {
+		console.log(data);
+		$('table#phenotype-table').replaceWith(data);
+		$('div#alert-signs').html("<div class=\"alert alert-success\"><b>Good Job!</b> You have successfully deleted a phenotype!</div>");
+	}).fail( function(){
+		$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
+	});
+
+	return false;
+}
+
 
 </script>
 
@@ -107,10 +195,11 @@ function deleteProject(elt) {
 
 {% block content %}
 
-<div class="container">
+<div class="container" id="admin-title">
 	{% block section_title %}<h1> Admin Page </h1>{% endblock section_title %}
 	<br />
-
+</div>
+<div class="container" id="project-section">
 	<!--****************** PROJECT TABLE ***********************-->
 	<div id="alert-signs">
 		{{ alert_msg|safe }}
@@ -174,6 +263,191 @@ function deleteProject(elt) {
 		
 	</div>
 </div>
+
+<div class="container" id="sample-submission-section">
+	<!--****************** SAMPLE SUBMISSION TABLE ***********************-->
+
+	<h3> All Sample Submissions  </h3>
+
+	<table class="table table-hover" id="sample-submission-table">
+		<tr>
+			<th> Project Name </th>
+			<th> Sample Submission Name </th>
+			<th> External Collaborator (Source) </th>
+			<th> Number of Samples </th>
+			<th> Created On </th>
+			<th> Last Updated </th>
+			<!-- Select Phenotypes, View Phenotypes -->
+			<th> Phenotype List </th>
+			<!--Incomplete Manifest, Failed Upload, Pending for Collaborators, Complete, Incomplete Phenotype list -->
+			<th> Status Of Order </th> 
+			<th> Delete? </th>
+		</tr>
+		{% for s in samplesubmissionlist_all %}
+		<tr id="{{s.pk}}">
+			<td>{{ s.project_name }}</td>
+			<td>{{ s.sample_submission_name }}</td>
+			<td>{{ s.source }}</td>
+			<td>{{ s.sample_num }}</td>
+			<td>{{ s.date_created }}</td>
+			<td>{{ s.last_updated }}</td>
+			<td>THIS SHOULD BE THE sample_submission ASSOCIATED PHENOTYPE LIST</td>
+			<td>{{ s.order_status }}</td>
+			<td> 
+				<a id="delete-sample{{s.pk}}" name="DEL_SS" class="btn delete" value="{{s.pk}}" onclick="deleteSampleSubmit(this)"><i class="icon-remove"></i></a>
+			</td>
+		</tr>
+		{% endfor %}
+		<tr>
+			<td> Dummy Data - Manifest_1210 </td>
+			<td> UK10K_CILWGA </td>
+			<td> University College London Medical School </td>
+			<td> 288 </td>
+			<td> April 5, 2013 </td>
+			<td> April 28, 2013</td>
+			<td> <a href="pheno_select"> Select Phenotypes </a></td>
+			<td> Incomplete Phenotype List </td>
+		</tr>
+		<tr>
+			<td> Dummy Data 2 - Manifest_1369 </td>
+			<td> 2019STDY </td>
+			<td> Sanger Centre </td>
+			<td> 96 </td>
+			<td> May 9, 2013 </td>
+			<td> May 15, 2013 </td>
+			<td> <a href="pheno-list"> View Phenotype List </a></td>
+			<td> <a href="welcome-collaborator"> Start Well-filling </a></td>
+		</tr>
+	</table>
+
+	<!--****************** ADD A SAMPLE SUBMISSION FORM ***********************-->
+
+	<div id="add_a_sample_submission_panel"> 
+		<h3> Add A Sample Submission </h3>
+		<br />
+		<form class="add_a_sample_submission" method="post" id="add_a_sample_submission_form">
+			{% csrf_token %}
+			<table>
+				{{ samplesubmissionform }}
+			</table>
+			<br />
+			<button id="add-sample-submit" class="btn btn-primary" type="submit" name="ADD_SS">Create a Sample Submission</button>
+		</form>
+	</div>
+</div>
+
+
+<!-- <div class="container" id="user-section"> -->
+	<!--****************** USER TABLE ***********************-->
+<!-- 	<h3> All Users in the Database </h3>
+
+	<table class="table table-hover" id="user-table">
+		<tr>
+			<th> Username </th>
+			<th> First name </th>
+			<th> Last Name </th>
+			<th> Email </th>
+			<th> Password </th>
+			<th> Date Joined </th>
+			<th> Is staff? </th>
+			<th> Is active? </th>
+			<th> Is superuser? </th>
+			<th> Last Login </th>
+			<th> Delete? </th>
+		</tr>
+		{% for u in userlist_all %}
+		<tr id="{{u.pk}}">
+			<td>{{ u.username }}</td>
+			<td>{{ u.first_name }}</td>
+			<td>{{ u.last_name }}</td>
+			<td>{{ u.email }}</td>
+			<td>{{ u.password }}</td>
+			<td>{{ u.date_joined }}</td>
+			<td>{{ u.is_staff }}</td>
+			<td>{{ u.is_active }}</td>
+			<td>{{ u.is_superuser }}</td>
+			<td>{{ u.last_login }}</td>
+			<td> 
+				<a id="delete-user{{u.pk}}" name="DEL_USER" class="btn delete" value="{{u.pk}}" onclick="deleteUser(this)"><i class="icon-remove"></i></a>
+			</td>
+		</tr>
+		{% endfor %}
+	</table> -->
+
+	<!--****************** ADD A USER FORM ***********************-->
+	<!-- <div id="add_a_user_panel"> 
+		<h3> Add A User </h3>
+		<br />
+		<form class="add_a_user" method="post" id="add_a_user_form">
+			{% csrf_token %}
+			<table>
+				{{ userform }}
+			</table>
+			<br />
+			<button id="add-user-submit" class="btn btn-primary" type="submit" name="ADD_USER">Create a User</button>
+		</form>
+	</div> -->
+
+
+<!-- 	<div id="add_a_user_panel"> 
+		<h3> Add A User </h3>
+		<br />
+		<form class="add_a_user" method="post" id="add_a_user_form">
+			{% csrf_token %}
+			<table>
+				{{ ucf }}
+			</table>
+			<button id="add-user-submit" class="btn btn-primary" type="submit" name="ADD_USER">Create a User</button>
+		</form>
+	</div>
+
+
+</div> -->
+
+
+<div class="container" id="phenotype-section">
+	<!--****************** PHENOTYPE TABLE ***********************-->
+	<h3> All Phenotypes </h3>
+
+	<table class="table table-striped table-bordered table-hover" id ="phenotype-table">
+		<tr>
+			<th> Phenotype Name </th>
+			<th> Phenotype Type </th>
+			<th> Phenotype Description </th>
+			<th> Phenotype Definition </th>
+			<th> Delete? </th>
+		</tr>
+		{% for p in phenotypelist_all %}
+		<tr id="{{p.pk}}">
+			<td>{{ p.phenotype_name }}</td>
+			<td>{{ p.phenotype_type_id }}</td>
+			<td>{{ p.phenotype_description }}</td>
+			<td>{{ p.phenotype_definition }}</td>
+			<td> 
+				<a id="delete-phenotype{{p.pk}}" name="DEL_PHENO" class="btn delete" value="{{p.pk}}" onclick="deletePhenotype(this)"><i class="icon-remove"></i></a>
+			</td>
+		</tr>
+		{% endfor %}
+	</table>
+
+	<!--****************** ADD A PHENOTYPE FORM ***********************-->
+	<div id="add_a_phenotype_panel"> 
+		<h3> Add A Phenotype </h3>
+		<b>NOTE: PHENOTYPE DEFINITION CAN USE THE TAG-IT FEATURE http://aehlke.github.io/tag-it/ </b>
+		<br />
+		<form class="add_a_phenotype" method="post" id="add_a_phenotype_form">
+			{% csrf_token %}
+			<table>
+				{{ phenotypeform }}
+			</table>
+			<br />
+			<button id="add-pheno" class="btn btn-primary" type="submit">Create a Phenotype</button>
+		</form>
+	</div>
+</div>
+
+
+
 
 
 {% endblock content %}
